--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nlw-journey",
+  "name": "front-end",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.408.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -33,5 +33,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
