--- a/packages/front-end/package.json
+++ b/packages/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.9",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
