--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,15 +1,8 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "_version": "20.1.0",
-
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["es2023"],
-    "module": "node16",
-    "target": "es2022",
-
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node16"
-  }
+    "outDir": "./dist",
+    "rootDir": "./src"
+  },
+  "include": ["src"]
 }
