--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
   },
   "references": [
     { "path": "./packages/backend" },
-    { "path": "./packages/frontend" }
+    { "path": "./packages/front-end" }
   ]
 }
